Switch from Paths.get to Path.of